<resources>
    <string name="app_name">Kursach</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Войти в аккаунт</string>
    <string name="logIn">Войти</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="callback_post">Отозваться</string>
    <string name="view_more">Посмотреть ещё</string>
    <string name="add_post">Добавить</string>
    <string name="upload">Отправить</string>
    <string name="quit">Выход</string>
    <string name="name">Прохоров Владимир Ефимович</string>
    <string name="aboout_me">Студент группы ИКБО-03-22\nПочта: vogbog92@gmail.com\nГод создания: 2024\n\nМобильное приложение для поиска команды для настольно ролевых игр</string>
    <string name="post_name">Название</string>
    <string name="player_count">Количество игроков</string>
    <string name="description">Описание</string>
    <string name="r_u_sure">Вы уверены?</string>
    <string name="profile_name">Имя</string>
    <string name="phone_number">Номер телефона</string>
    <string name="user_instruction">Инструкция пользователю:\nНа первой вкладке происходит просмотр заявок мастеров, где можно откликнуться на заявку мастера и получить его контакты.\nВо второй влкдаке заявки, на которые Вы откликнулись. Из них можно выходить, если Вы передумали.\nНа третьей вкладке Ваши заявки</string>
</resources>