<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/buttons_blue"
            android:paddingStart="50dp"
            android:paddingTop="15dp"
            android:paddingEnd="50dp"
            android:paddingBottom="15dp"
            android:text="@string/logIn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/goToSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

    </LinearLayout>
</FrameLayout>